// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Polkadot AssetHub Multisig Proxy > failure tests > 2-of-3 multisig as standard proxy (non-transfer) > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
      "callHash": "(hash)",
      "multisig": "12BtfvVr1dH42xFTjMbF5c4MAMLRBRGfiHY24cN7KkueFPFF",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`Polkadot AssetHub Multisig Proxy > failure tests > 2-of-3 multisig as standard proxy (non-transfer) > events when Bob approves multisig call 1`] = `
[
  {
    "data": {
      "approving": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
      "callHash": "(hash)",
      "multisig": "12BtfvVr1dH42xFTjMbF5c4MAMLRBRGfiHY24cN7KkueFPFF",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`Polkadot AssetHub Multisig Proxy > success tests > 2-of-3 multisig as standard proxy (any) > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
      "callHash": "(hash)",
      "multisig": "12BtfvVr1dH42xFTjMbF5c4MAMLRBRGfiHY24cN7KkueFPFF",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`Polkadot AssetHub Multisig Proxy > success tests > 2-of-3 multisig as standard proxy (any) > events when Bob approves multisig call 1`] = `
[
  {
    "data": {
      "approving": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
      "callHash": "(hash)",
      "multisig": "12BtfvVr1dH42xFTjMbF5c4MAMLRBRGfiHY24cN7KkueFPFF",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`Polkadot AssetHub Multisig Proxy > success tests > 2-of-3 multisig as standard proxy with announcement and rejection > events when Bob approves multisig call 1`] = `
[
  {
    "data": {
      "approving": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
      "callHash": "(hash)",
      "multisig": "12BtfvVr1dH42xFTjMbF5c4MAMLRBRGfiHY24cN7KkueFPFF",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`Polkadot AssetHub Multisig Proxy > success tests > 2-of-3 multisig as standard proxy with announcement and rejection > events when Dave rejects the announced call 1`] = `[]`;

exports[`Polkadot AssetHub Multisig Proxy > success tests > 2-of-3 multisig with pure proxy (any) > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
      "callHash": "(hash)",
      "multisig": "13CbYWp7BnD9xbogNsHr9TSx5U1SEYe4FAXJds8ogmnhet6L",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`Polkadot AssetHub Multisig Proxy > success tests > 2-of-3 multisig with pure proxy (any) > events when Bob's proxy approves the multisig call 1`] = `
[
  {
    "data": {
      "approving": "15dVjyJyTibm43j1ZnwgSokvqJaEygp17Q7J1kQcnaEn93rN",
      "callHash": "(hash)",
      "multisig": "13CbYWp7BnD9xbogNsHr9TSx5U1SEYe4FAXJds8ogmnhet6L",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`Polkadot AssetHub Multisig Proxy > success tests > 2-of-3 multisig with pure proxy (non-transfer) > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
      "callHash": "(hash)",
      "multisig": "14VXBETizE4SPQBYtHxLeRAwxdxkxF3X3H1uDNYPK5U1eAqE",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`Polkadot AssetHub Multisig Proxy > success tests > 2-of-3 multisig with pure proxy (non-transfer) > events when Bob's proxy approves the multisig call 1`] = `
[
  {
    "data": {
      "approving": "15JXyF3YEpuWBbwfmsUjbTzhaS7zZYcNrUrHffpwZUJ1WMB6",
      "callHash": "(hash)",
      "multisig": "14VXBETizE4SPQBYtHxLeRAwxdxkxF3X3H1uDNYPK5U1eAqE",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`Polkadot AssetHub Multisig Proxy > success tests > 2-of-3 multisig with pure proxy multisig > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
      "callHash": "(hash)",
      "multisig": "13mUnZhVacgRPhsZyKAjSTeDuHzRm3r66MYyZGc1fQhE51qP",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`Polkadot AssetHub Multisig Proxy > success tests > Cancel 2-of-3 multisig with pure proxy before any other approvals > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "13Hp4rX5kTCKaign5RE6MSLwMdkTGj3s2QpJuwHZDMAEHYyj",
      "callHash": "(hash)",
      "multisig": "156QU1J8zRynCWBs9UEYQLuedAdmNZXKTWEggMCTogu1nkBJ",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;
